--- a/src/app/paginas/not-found/not-found.component.css
+++ b/src/app/paginas/not-found/not-found.component.css
@@ -20,13 +20,13 @@
         height: 60%;
 
         h3 {
-            font-size: 6.5rem;
+            font-size: 6vw;
             margin: 0;
             color: #75c58e;
         }
 
         p {
-            font-size: 4.5rem;
+            font-size: 5vw;
             margin: 0;
             color: white;
         }
