--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -3,7 +3,7 @@
     position: relative;
     z-index: 9;
     display: flex;
-    margin: 10px;
+    /* margin: 10px; */
     border-radius: 28px;
     /* box-shadow: 5px -5px teal; */
     scale: 1.01;
@@ -76,7 +76,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 90dvw;
+        width: 100%;
         
         .text{
             height: 100%;
