--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -4,7 +4,7 @@
     z-index: 7;
     display: flex;
     flex-direction: column;
-    margin: 20px 10px;
+    margin: 20px 0px;
     border-radius: 28px;
     scale: 1.01;
     background: url('https://webimages.mongodb.com/_com_assets/cms/kv2nqd78t2t7fm88e-top-left.svg?auto=format%252Ccompress') top left no-repeat, url('https://webimages.mongodb.com/_com_assets/cms/kv2m7ue0kw174g25m-top-right.svg?auto=format%252Ccompress') top right no-repeat rgb(51, 49, 49);
@@ -49,25 +49,25 @@
                 color: white;
             }
 
-            .github{
+            .github {
                 display: flex;
                 align-items: center;
                 width: 50%;
                 transition: ease-in-out 300ms;
                 opacity: 0.7;
 
-                a{
+                a {
                     text-decoration: none;
                     color: white;
                 }
 
-                img{
+                img {
                     height: 20px;
                     margin-left: 5px;
                 }
             }
-            
-            .github:hover{
+
+            .github:hover {
                 scale: 1.05;
                 opacity: 1;
             }
@@ -199,7 +199,36 @@
 }
 
 @media screen and (max-width: 850px) {
-    .contenedorProyectos{
-        width: 73dvw; 
+    .contenedorProyectos {
+        width: 100%;
+
+        .proyectos {
+
+            .proyecto {
+
+                p {
+                    font-size: 0.8rem;
+                }
+            }
+        }
+
+        .tecnologiaFrontEnd {
+
+            .tarjeta .img img {
+                height: 50px;
+            }
+        }
+
+        .tecnologiaBackEnd {
+            .tarjeta .img img {
+                height: 50px;
+            }
+        }
+
+        .tecnologiaDb {
+            .tarjeta .img img {
+                height: 50px;
+            }
+        }
     }
 }
